[gd_scene load_steps=19 format=3 uid="uid://di6csugfnhws6"]

[ext_resource type="Script" path="res://Characters/Enemies/GInfected/GInfected.gd" id="1_cwoff"]
[ext_resource type="Texture2D" uid="uid://365qmkhtd3e4" path="res://Characters/Enemies/GInfected/Hooded knight_finalsheet-1.png (2).png" id="2_ak3m6"]
[ext_resource type="AudioStream" uid="uid://dl04dqjdbgf6r" path="res://musica/GOBLIN SOUND FX 6 - Gaming Sound Effects HD FREE NO Copyright.mp3" id="3_4h40t"]
[ext_resource type="AudioStream" uid="uid://b4netaoy8bsn6" path="res://musica/GOBLIN SOUND 12 - Gaming Sound Effects HD FREE NO Copyright.mp3" id="4_byc10"]

[sub_resource type="Animation" id="Animation_7cxmw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_vqgxd"]
resource_name = "aparecer"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_8as7f"]
resource_name = "attack"
length = 0.42
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 3), Vector2i(1, 3), Vector2i(2, 3), Vector2i(3, 3)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("attack shape:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.01, 0.42),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_er0rn"]
resource_name = "deathRight"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 4), Vector2i(1, 4), Vector2i(2, 4), Vector2i(3, 4), Vector2i(4, 4), Vector2i(5, 4), Vector2i(6, 4), Vector2i(7, 4), Vector2i(8, 4), Vector2i(9, 4)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_4u2en"]
resource_name = "hurted"
length = 0.1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2i(3, 0), Vector2i(4, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_4mem4"]
resource_name = "walkLeft"
length = 0.6
loop_mode = 1
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 2), Vector2i(1, 2), Vector2i(2, 2), Vector2i(3, 2)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_nrxo3"]
resource_name = "walkRight"
length = 0.6
loop_mode = 1
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 2), Vector2i(1, 2), Vector2i(2, 2), Vector2i(3, 2)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_deu28"]
resource_name = "walkStand"
length = 0.6
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6lxx2"]
_data = {
"RESET": SubResource("Animation_7cxmw"),
"aparecer": SubResource("Animation_vqgxd"),
"attack": SubResource("Animation_8as7f"),
"deathRight": SubResource("Animation_er0rn"),
"hurted": SubResource("Animation_4u2en"),
"walkLeft": SubResource("Animation_4mem4"),
"walkRight": SubResource("Animation_nrxo3"),
"walkStand": SubResource("Animation_deu28")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_jywya"]
radius = 115.278

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hk116"]
radius = 22.9991
height = 59.9976

[sub_resource type="CircleShape2D" id="CircleShape2D_t73k3"]
radius = 11.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7080r"]
size = Vector2(7, 3)

[sub_resource type="CircleShape2D" id="CircleShape2D_msyfa"]
radius = 11.4018

[node name="GInfected" type="CharacterBody2D"]
position = Vector2(2, 1)
script = ExtResource("1_cwoff")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("2_ak3m6")
hframes = 10
vframes = 15

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_6lxx2")
}

[node name="detection" type="Area2D" parent="."]
visible = false

[node name="detection shape" type="CollisionShape2D" parent="detection"]
shape = SubResource("CircleShape2D_jywya")

[node name="attack shape" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-1, 0)
rotation = -1.56177
shape = SubResource("CapsuleShape2D_hk116")
disabled = true

[node name="enemy_hitbox" type="Area2D" parent="."]
visible = false

[node name="body shape" type="CollisionShape2D" parent="enemy_hitbox"]
position = Vector2(0, 3)
shape = SubResource("CircleShape2D_t73k3")

[node name="foot shape" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0.5, 11.5)
shape = SubResource("RectangleShape2D_7080r")

[node name="caminar" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_4h40t")

[node name="attack detector" type="Area2D" parent="."]
visible = false

[node name="attack detector shape" type="CollisionShape2D" parent="attack detector"]
position = Vector2(0, 3)
rotation = -0.678974
shape = SubResource("CircleShape2D_msyfa")

[node name="muerte" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_byc10")

[connection signal="body_entered" from="detection" to="." method="_on_detection_body_entered"]
[connection signal="body_exited" from="detection" to="." method="_on_detection_body_exited"]
[connection signal="area_entered" from="enemy_hitbox" to="." method="_on_enemy_hitbox_area_entered"]
[connection signal="area_shape_entered" from="attack detector" to="." method="_on_attack_detector_area_shape_entered"]
